# haskell-notes

./: CHANGELOG.md  README.md  haskell-notes.cabal  hs.cabal  package.yaml  stack.yaml
app/: Main.hs  Snake.hs
src/: Snake.hs  ValidPairs.hs
