cabal-version:      2.4
name:               haskell-notes
version:            0.0.1
author:             Dmitry Kuskov
maintainer:         dmtrkskv@gmail.com

executable hs
    main-is:          Main.hs
    build-depends:    
        base ^>=4.15.1.0,
        mtl ^>=2.2.2,
        matrix >=0.3.6.1
    hs-source-dirs:   app
    default-language: Haskell2010
